--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
                 <a href="#" class="forgot-link">Forgot Password?</a>
             </div>
 
-            <button class="login-btn" ><a style="color: white;text-decoration: none;transition: opacity 0.3s;" href="{{ url_for('home') }}">Back to home</a></button>
+            <button class="login-btn" ><a style="color: white;text-decoration: none;transition: opacity 0.3s;" href="{{ url_for('home') }}"> Back </a></button>
             <button type="submit" class="login-btn" >Sign In</button>
         </form>
 
@@ -55,4 +55,5 @@
         </div>
     </div>
 </body>
+
 </html>
